# navigation_3d_rs

./: Cargo.toml
assets/models/: shuttle.glb
assets/shaders/: avo_raymarch.wgsl  grid_skybox.wgsl  grid_texture.wgsl  plane_material_shader.wgsl  ray_marching.wgsl  velocity_texture.wgsl
crates/coordination/: Cargo.toml
crates/coordination/src/: circle_formation.rs  expectation_maximization.rs  formation.rs  formation_planner.rs  formation_template.rs  hungarian.rs  least_squares.rs  lib.rs  line_formation.rs  queue_formation.rs  v_formation.rs
crates/geometry/: Cargo.toml
crates/geometry/src/: aabb.rs  arc.rs  circle.rs  circle_3d.rs  colliders.rs  cone.rs  half_plane.rs  hyperplane.rs  infinite_cone.rs  lib.rs  line_segment_2d.rs  line_segment_3d.rs  matrix.rs  plane.rs  points.rs  ray_2d.rs  ray_3d.rs  sphere.rs  spherinder.rs  spherinder_hyperplane_intersecion.rs  spherinder_hyperplane_plane_intersecion.rs  triangle.rs
crates/orca/: Cargo.toml
crates/orca/src/: acceleration_velocity_obstacle_3d.rs  agent_3d.rs  formation_velocity_obstacle_3d.rs  lib.rs  solver_2d.rs  solver_3d.rs  solver_4d.rs  velocity_obstacle_3d.rs
crates/steering/: Cargo.toml
crates/steering/src/: agent.rs  lib.rs  steering_functions.rs  turn_plane.rs
crates/svo/: Cargo.toml
crates/svo/src/: sparse_voxel_octree.rs  sparse_voxel_octree_builder.rs  sparse_voxel_octree_link.rs  voxelized_mesh.rs
examples/3d_sphere_of_agents/: Cargo.toml
examples/3d_sphere_of_agents/src/: main.rs
examples/3d_two_agents_against_each_other/: Cargo.toml
examples/3d_two_agents_against_each_other/src/: main.rs
examples/avo_visualiztion/: Cargo.toml
examples/avo_visualiztion/src/: main.rs  ray_marching.rs
examples/blocked_path/: Cargo.toml
examples/blocked_path/src/: main.rs
examples/expectation_maximization_experiment/: Cargo.toml
examples/formation_overview/: Cargo.toml
examples/formation_overview/src/: main.rs
examples/formation_test/: Cargo.toml
examples/formation_test/src/: main.rs
examples/fvo_visualization/: Cargo.toml
examples/shapes_tester/: Cargo.toml
examples/spherinder_crossection_test/: Cargo.toml
examples/steering_test/: Cargo.toml
examples/utils/: Cargo.toml
(+13 files in other folders)
