[package]
name = "example_3d_sphere_of_agents"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
bevy = { version = "0.12.1" }
example_utils = { path = "../utils" }
orca = { path = "../../crates/orca", features = [] }
geometry = { path = "../../crates/geometry", features = [] }
bevy_egui = { version = "0.24.0" }
rand = "0.8.5"

