[package]
name = "formation_overview"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { version = "0.12.1" }
example_utils = { path = "../utils" }
geometry = { path = "../../crates/geometry" }
steering = { path = "../../crates/steering" }
coordination = { path = "../../crates/coordination" }
orca = { path = "../../crates/orca" }
bevy_egui = { version = "0.24.0" }
rand = "0.8.5"
bevy_transform_gizmo = "0.10.2"
bevy_mod_picking = { version = "0.17.0", default-features = false, features = ["selection", "backend_raycast"] }
